--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,137 +1,55 @@
-<svg
-  id="background"
-  width="1728"
-  height="1235"
-  viewBox="0 0 1728 1235"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
-  <g opacity="0.75" filter="url(#filter0_f_39_143)">
-    <circle cy="1000" r="264" fill="url(#paint0_linear_39_143)" />
-  </g>
-  <g opacity="0.65" filter="url(#filter1_f_39_143)">
-    <circle cx="1720" cy="264" r="379" fill="url(#paint1_linear_39_143)" />
-  </g>
-  <defs>
-    <filter
-      id="filter0_f_39_143"
-      x="-485"
-      y="515"
-      width="970"
-      height="970"
-      filterUnits="userSpaceOnUse"
-      color-interpolation-filters="sRGB"
-    >
-      <feFlood flood-opacity="0" result="BackgroundImageFix" />
-      <feBlend
-        mode="normal"
-        in="SourceGraphic"
-        in2="BackgroundImageFix"
-        result="shape"
-      />
-      <feGaussianBlur
-        stdDeviation="110.5"
-        result="effect1_foregroundBlur_39_143"
-      />
-    </filter>
-    <filter
-      id="filter1_f_39_143"
-      x="1120"
-      y="-336"
-      width="1200"
-      height="1200"
-      filterUnits="userSpaceOnUse"
-      color-interpolation-filters="sRGB"
-    >
-      <feFlood flood-opacity="0" result="BackgroundImageFix" />
-      <feBlend
-        mode="normal"
-        in="SourceGraphic"
-        in2="BackgroundImageFix"
-        result="shape"
-      />
-      <feGaussianBlur
-        stdDeviation="110.5"
-        result="effect1_foregroundBlur_39_143"
-      />
-    </filter>
-    <linearGradient
-      id="paint0_linear_39_143"
-      x1="196.5"
-      y1="902"
-      x2="-2.55853e-05"
-      y2="1264"
-      gradientUnits="userSpaceOnUse"
-    >
-      <stop stop-color="var(--bttm-left-blur-1)" />
-      <stop offset="1" stop-color="var(--bttm-left-blur-2)" />
-    </linearGradient>
-    <linearGradient
-      id="paint1_linear_39_143"
-      x1="1720"
-      y1="-115"
-      x2="1720"
-      y2="643"
-      gradientUnits="userSpaceOnUse"
-    >
-      <stop stop-color="var(--top-right-blur-1)" />
-      <stop offset="1" stop-color="var(--top-right-blur-2)" />
-    </linearGradient>
-  </defs>
-</svg>
+<header class="header">
+  <h1>{{ "home.title" | translate }}</h1>
+</header>
 <div id="content">
-  <div class="header">
-    <h1>Extraescolares demo</h1>
-    <p>
-      Gestionar las actividades extraescolares puede ser un desafío,
-      especialmente para los padres ocupados y sus hijos que tienen un horario
-      lleno de actividades escolares y extracurriculares. Aquí hay algunos
-      consejos para ayudar a gestionar las actividades extraescolares:
-    </p>
-    <ul>
-      <li>
-        Priorizar las actividades: Es importante priorizar las actividades
-        extraescolares según los intereses y las necesidades de los niños y de
-        la familia en general. Asegúrese de que su hijo tenga suficiente tiempo
-        para realizar sus tareas escolares, actividades extracurriculares y
-        también para descansar y relajarse.
-      </li>
-      <li>
-        Establecer horarios: Es útil tener un horario semanal para que todos en
-        la familia sepan cuándo y dónde se llevarán a cabo las actividades.
-        También puede ayudar a evitar conflictos de horarios y asegurarse de que
-        haya suficiente tiempo para todas las actividades.
-      </li>
-      <li>
-        Organización: Mantener una lista de verificación o un calendario puede
-        ayudar a mantenerse organizado y asegurarse de que todos los suministros
-        necesarios para las actividades estén disponibles. Además, asegúrese de
-        que su hijo tenga un lugar para guardar su equipo deportivo o musical y
-        que esté preparado para la actividad.
-      </li>
-      <li>
-        Comunicación: Comuníquese con los maestros, entrenadores y otros padres
-        para asegurarse de que está al tanto de cualquier cambio en los horarios
-        o requisitos para las actividades. Además, asegúrese de que su hijo esté
-        al tanto de cualquier cambio en su horario o en las actividades.
-      </li>
-      <li>
-        Flexibilidad: A veces, incluso con la mejor planificación, pueden surgir
-        imprevistos. Es importante ser flexible y estar dispuesto a ajustar el
-        horario y las actividades según sea necesario.
-      </li>
-      <li>
-        Fomentar la responsabilidad: Anime a su hijo a tomar responsabilidad por
-        sus actividades extraescolares, como empacar su propio equipo o
-        practicar sus habilidades en casa. Esto puede ayudar a desarrollar
-        habilidades de organización y responsabilidad que serán útiles en el
-        futuro.
-      </li>
-    </ul>
-    <p>
-      En general, la gestión de las actividades extraescolares requiere un poco
-      de planificación y organización, pero puede ser una experiencia positiva y
-      enriquecedora para su hijo y para toda la familia.
-    </p>
-  </div>
+  <p>
+    Gestionar las actividades extraescolares puede ser un desafío, especialmente
+    para los padres ocupados y sus hijos que tienen un horario lleno de
+    actividades escolares y extracurriculares. Aquí hay algunos consejos para
+    ayudar a gestionar las actividades extraescolares:
+  </p>
+  <ul>
+    <li>
+      Priorizar las actividades: Es importante priorizar las actividades
+      extraescolares según los intereses y las necesidades de los niños y de la
+      familia en general. Asegúrese de que su hijo tenga suficiente tiempo para
+      realizar sus tareas escolares, actividades extracurriculares y también
+      para descansar y relajarse.
+    </li>
+    <li>
+      Establecer horarios: Es útil tener un horario semanal para que todos en la
+      familia sepan cuándo y dónde se llevarán a cabo las actividades. También
+      puede ayudar a evitar conflictos de horarios y asegurarse de que haya
+      suficiente tiempo para todas las actividades.
+    </li>
+    <li>
+      Organización: Mantener una lista de verificación o un calendario puede
+      ayudar a mantenerse organizado y asegurarse de que todos los suministros
+      necesarios para las actividades estén disponibles. Además, asegúrese de
+      que su hijo tenga un lugar para guardar su equipo deportivo o musical y
+      que esté preparado para la actividad.
+    </li>
+    <li>
+      Comunicación: Comuníquese con los maestros, entrenadores y otros padres
+      para asegurarse de que está al tanto de cualquier cambio en los horarios o
+      requisitos para las actividades. Además, asegúrese de que su hijo esté al
+      tanto de cualquier cambio en su horario o en las actividades.
+    </li>
+    <li>
+      Flexibilidad: A veces, incluso con la mejor planificación, pueden surgir
+      imprevistos. Es importante ser flexible y estar dispuesto a ajustar el
+      horario y las actividades según sea necesario.
+    </li>
+    <li>
+      Fomentar la responsabilidad: Anime a su hijo a tomar responsabilidad por
+      sus actividades extraescolares, como empacar su propio equipo o practicar
+      sus habilidades en casa. Esto puede ayudar a desarrollar habilidades de
+      organización y responsabilidad que serán útiles en el futuro.
+    </li>
+  </ul>
+  <p>
+    En general, la gestión de las actividades extraescolares requiere un poco de
+    planificación y organización, pero puede ser una experiencia positiva y
+    enriquecedora para su hijo y para toda la familia.
+  </p>
 </div>
